# api_project

./: .env  pyproject.toml  trello_dump.json
tests/: test_testing_lesson.py  test_trello_cli.py  test_trello_project.py
trello_cli/: apis_2.py  testing_lesson.py  trello_project.py
